--- a/index.html
+++ b/index.html
@@ -12,20 +12,15 @@
 
   <h1>Show How much You know about superheroes</h1>
 
-  <div id="buttons">
-    <button id=option1>option1</button>
-    <button id=option2>option2</button>
-    <button id=option3>option3</button>
-    <button id=option4>option4</button>
+  <div id="answer-buttons">
+   
+    <button class="btn">answer1</button>
+    <button class="btn">answer3</button>
+      <button class="btn">answer3</button>
+      <button class="btn">answer4</button>
 
 
-
-
-
-
-
-
-  </div>
+</div>
 
 
   <script src="script.js"></script>
