--- a/index.html
+++ b/index.html
@@ -4,24 +4,54 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>game</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-
-  <h1>Show How much You know about superheroes</h1>
-
-  <div id="answer-buttons">
-   
-    <button class="btn">answer1</button>
-    <button class="btn">answer3</button>
-      <button class="btn">answer3</button>
-      <button class="btn">answer4</button>
-
-
+  <div id="container">
+   <div> <img src="img/superman.png"></div>
+      <div> <img src="img/aquaman.png"></div>
+       <div> <img src="img/batman.png"></div>
+       <div> <img src="img/wonder-woman.png"></div>
+      <div>  <img src="img/flash.png"></div>
+    <div> <img src="img/superman.png"></div>
+      <div> <img src="img/aquaman.png"></div>
+       <div> <img src="img/batman.png"></div>
+       <div> <img src="img/wonder-woman.png"></div>
+      <div>  <img src="img/flash.png"></div>
+    </div>
+    </div>
+ 
 </div>
+  <div class="game">
 
+  <h1>Superhero Trivia</h1>
+    <div class="trivia">
+      <h2 id="question"></h2>
+      <div id="answer-buttons">
+        <div> <button class="btn">answer1</button>  </div>
+        <div><button class="btn">answer3</button>  </div>
+          <div><button class="btn">answer3</button>  </div>
+          <div><button class="btn">answer4</button>  </div>
+      </div>
+       <button id="next-btn">Next</button> 
+    </div>
+  </div>
+  
+  <div id="container2">
+       <div> <img src="img/captain.png"></div>
+       <div> <img src="img/Dr-strange.png"></div>
+       <div> <img src= "img/iron.png"></div>
+       <div> <img src="img/black-widow.png"></div>
+       <div> <img src="img/hulk.png"></div>
+    <div id="container2">
+       <div> <img src="img/captain.png"></div>
+       <div> <img src="img/Dr-strange.png"></div>
+       <div> <img src="img/iron.png"></div>
+       <div> <img src="img/black-widow.png"></div>
+       <div> <img src="img/hulk.png"></div>
+</div>
 
   <script src="script.js"></script>
 
